# wedding-list

./: .pre-commit-config.yaml  LICENSE  gifts.yaml  main.py  pyproject.toml
